# esp32_chuwugui

./: CMakeLists.txt  Makefile  README.md  partitions_flash_tone.csv  sdkconfig  sdkconfig.old
components/audio_flash_tone/: audio_tone_uri.c  audio_tone_uri.h
main/: CMakeLists.txt  Kconfig.projbuild  as608.c  as608.h  component.mk  play_mp3_control_example.c  uart_echo_example_main.c  uart_echo_example_main.c.bak
